{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 16,
  "lineage": "bb231b7d-eb01-afe7-37e8-23f33908b7ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfb657b4913b236f",
            "arn": "arn:aws:ec2:eu-north-1:360496493965:elastic-ip/eipalloc-0dfb657b4913b236f",
            "domain": "vpc",
            "id": "eipalloc-0dfb657b4913b236f",
            "network_border_group": "eu-north-1",
            "public_dns": "ec2-56-228-78-76.eu-north-1.compute.amazonaws.com",
            "public_ip": "56.228.78.76",
            "public_ipv4_pool": "amazon",
            "region": "eu-north-1",
            "tags": {
              "Name": "homework-nat-eip"
            },
            "tags_all": {
              "Name": "homework-nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "eipalloc-0dfb657b4913b236f",
            "region": "eu-north-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05bfa4a7765f38076",
            "arn": "arn:aws:ec2:eu-north-1:360496493965:instance/i-09928de62acd0e6bc",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09928de62acd0e6bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-homework-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07cc5ef6e28d07d0f"
              }
            ],
            "primary_network_interface_id": "eni-07cc5ef6e28d07d0f",
            "private_dns": "ip-10-0-2-220.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.220",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f1466ac77e960bf3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07a0d3d00e20101a9",
            "tags": {
              "Name": "homework-private-ec2"
            },
            "tags_all": {
              "Name": "homework-private-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02bce557844c55aad"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "i-09928de62acd0e6bc",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.homework",
            "aws_security_group.private_sg",
            "aws_security_group.public_sg",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-05bfa4a7765f38076",
            "arn": "arn:aws:ec2:eu-north-1:360496493965:instance/i-0949582e43de722dc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0949582e43de722dc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform-homework-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0df3af4e3d16e7ecf"
              }
            ],
            "primary_network_interface_id": "eni-0df3af4e3d16e7ecf",
            "private_dns": "ip-10-0-1-133.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-13-49-69-77.eu-north-1.compute.amazonaws.com",
            "public_ip": "13.49.69.77",
            "region": "eu-north-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02e61413546801caf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e950a66485767a63",
            "tags": {
              "Name": "homework-public-ec2"
            },
            "tags_all": {
              "Name": "homework-public-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-041084aef524345b9"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "i-0949582e43de722dc",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_key_pair.homework",
            "aws_security_group.public_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:internet-gateway/igw-08133005f5a7cfdd5",
            "id": "igw-08133005f5a7cfdd5",
            "owner_id": "360496493965",
            "region": "eu-north-1",
            "tags": {
              "Name": "homework-igw"
            },
            "tags_all": {
              "Name": "homework-igw"
            },
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "igw-08133005f5a7cfdd5",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dfb657b4913b236f",
            "association_id": "eipassoc-09864d5b111227aa8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0607e94ceb3213a9d",
            "network_interface_id": "eni-05b22144334dda606",
            "private_ip": "10.0.1.205",
            "public_ip": "56.228.78.76",
            "region": "eu-north-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e950a66485767a63",
            "tags": {
              "Name": "homework-nat-gateway"
            },
            "tags_all": {
              "Name": "homework-nat-gateway"
            },
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "nat-0607e94ceb3213a9d",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:route-table/rtb-0a149a5ba48e4357a",
            "id": "rtb-0a149a5ba48e4357a",
            "owner_id": "360496493965",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0607e94ceb3213a9d",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homework-private-rt"
            },
            "tags_all": {
              "Name": "homework-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "rtb-0a149a5ba48e4357a",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:route-table/rtb-04cd2d31b42de9d26",
            "id": "rtb-04cd2d31b42de9d26",
            "owner_id": "360496493965",
            "propagating_vgws": [],
            "region": "eu-north-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08133005f5a7cfdd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "homework-public-rt"
            },
            "tags_all": {
              "Name": "homework-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "rtb-04cd2d31b42de9d26",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0124dd2f5c3cb6de1",
            "region": "eu-north-1",
            "route_table_id": "rtb-0a149a5ba48e4357a",
            "subnet_id": "subnet-07a0d3d00e20101a9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "rtbassoc-0124dd2f5c3cb6de1",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05751d6207ae5cea7",
            "region": "eu-north-1",
            "route_table_id": "rtb-04cd2d31b42de9d26",
            "subnet_id": "subnet-0e950a66485767a63"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "rtbassoc-05751d6207ae5cea7",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:security-group/sg-02bce557844c55aad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02bce557844c55aad",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [
                  "sg-041084aef524345b9"
                ],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-041084aef524345b9"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "homework-private-sg",
            "name_prefix": "",
            "owner_id": "360496493965",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homework-private-sg"
            },
            "tags_all": {
              "Name": "homework-private-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "sg-02bce557844c55aad",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:security-group/sg-041084aef524345b9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-041084aef524345b9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "homework-public-sg",
            "name_prefix": "",
            "owner_id": "360496493965",
            "region": "eu-north-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "homework-public-sg"
            },
            "tags_all": {
              "Name": "homework-public-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "sg-041084aef524345b9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:subnet/subnet-07a0d3d00e20101a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a0d3d00e20101a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "360496493965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "homework-private-subnet"
            },
            "tags_all": {
              "Name": "homework-private-subnet"
            },
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "subnet-07a0d3d00e20101a9",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:subnet/subnet-0e950a66485767a63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e950a66485767a63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "360496493965",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-north-1",
            "tags": {
              "Name": "homework-public-subnet"
            },
            "tags_all": {
              "Name": "homework-public-subnet"
            },
            "vpc_id": "vpc-008de1d766ae09dc8"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "subnet-0e950a66485767a63",
            "region": "eu-north-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:360496493965:vpc/vpc-008de1d766ae09dc8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05920753e2f83b368",
            "default_route_table_id": "rtb-0c78b07d0cc79d4a1",
            "default_security_group_id": "sg-0c16db1a29183f951",
            "dhcp_options_id": "dopt-00cf96a16be5f57b7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008de1d766ae09dc8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c78b07d0cc79d4a1",
            "owner_id": "360496493965",
            "region": "eu-north-1",
            "tags": {
              "Name": "homework-vpc"
            },
            "tags_all": {
              "Name": "homework-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "360496493965",
            "id": "vpc-008de1d766ae09dc8",
            "region": "eu-north-1"
          }
        }
      ]
    }
  ]
}